--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -67,10 +67,23 @@
 
 .form form{
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
 
+
+form .form-titulo{
+    width: 100%;
+    background-color: pink;
+    padding-top: 50px;
+}
+
+form .form-titulo h1{
+    width: 100%;
+    height: 100%;
+    background-color: #A6A6A6;
 
 }
 
@@ -79,7 +92,6 @@
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 20px;
-    font-size: 40pt;
     letter-spacing: 1rem;
     color: #3F3F3F;
 }
@@ -173,7 +185,7 @@
 .btn-cadastrar{
     background-color: #63a073; 
     border: none;
-    width: 100%;
+    width: 99%;
 }
 
 .btn-cadastrar:hover{
@@ -193,30 +205,6 @@
 }
 
 
-.imagens-direita{
-  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-
-}
-
-.imagens-direita img{
-    width: 25rem;
-    
-}
-
-
-.imagens-direita #circulo-amarelo img {
-    width: 11rem;
-    position: absolute;
-    right: 8rem;
-    top: -2rem;
- 
-
-}
 
 .texto-pergunta{
     margin-left: 20px;
