--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -8,22 +8,11 @@
 }
 
 .container-geral{
-    background-color: black;
+    background-color: #F2F2F2;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-}
-
-.container-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: greenyellow;
-}
-
-.container-header #logo{
-    width: 200px;
 }
 
 .container-conteudo{
@@ -48,30 +37,10 @@
     width: 100%;
 }
 
-.menu ul{
-    background-color: #FFFFFF;
-    list-style: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: left;
-    padding: 40px 20px;
+.busca-orkut input{
+    border: 1px solid #A6A6A6;
+    padding: 10px 30px;
     border-radius: 20px;
+    margin: 0px 5px;
+    height: 50px; 
 }
-
-.menu ul li{
-    margin: 5px 0px;
-
-}
-
-.menu ul li a{
-   text-decoration: none;
-   color: #A6A6A6;
-}
-.menu ul li a:hover{
-    background-color: rebeccapurple;
-    color: #FFFFFF;
- }
-
- .menu span#burger{
-    background-color: darkblue;
- }
