Add imagens + inicio da comunidade

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -153,6 +153,11 @@ main {
 
 /*--- Footer ---*/
 
+footer a{
+    text-decoration: none;
+    color: #A6A6A6;
+}
+
 footer {
     position: absolute;
     bottom: 0;
