--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -208,20 +208,125 @@
 }
 
 .bloco-welcome{
-    background-color: aquamarine;
+    background-color: #F2F2F2;
     width: 100%;
-    border-radius: 3%;
+    border-radius: 60px;
 
     display: flex;
     flex-direction: column;
+    padding: 5%;
+}
+
+.bloco-welcome h3{
+    font-size: 20pt;
+}
+
+.bloco-welcome h2{
+    font-size: 25pt;
+}
+
+.bloco-welcome hr{
+    border-color: #CEA06B;
+    width: 90%;
+    font-weight: bold;
+    align-items: center;
 }
 
 .itens-principais{
     display: flex;
     flex-direction: row;
+    width: 60%;
 
 }
 
 .item-welcome{
+    display: flex;
+    flex-direction: column;
+}
+
+.item-welcome img{
+    width: 30%;
+}
+
+.ultimas-visualizacoes{
+    display: flex;
+    flex-direction: row;
+}
+
+.pessoa img{
+    border-radius: 100%;
+    width: 80%;
+}
+
+.aniversariantes{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.aniversariante img{
+    background-color: #7A7473;
+    border-radius: 100%;
+    width: 150px;
+    margin-right: 15px;
+}
+
+.container-postar{
+    background-color: #D9D9D9;
+
+    width: 100%;
+    border-radius: 60px;
+
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+
+    margin-top: 5%;
+}
+
+.escreva-algo{
+    display: flex;
+    flex-direction: row;
     
 }
+
+.escreva-algo img{
+    border-radius: 100%;
+    width: 10%;
+    
+}
+.escreva-algo #post{
+    border-radius: 80px;
+    width: 88%;
+    margin-left: 2%;
+    border: none;
+    
+}
+
+.botoes-post{
+    margin-top: 2%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.botoes-post button{
+    padding: 10px;
+    margin-right: 5px;
+    border-radius: 40px;
+    width: 25%;
+    cursor: pointer;
+    border: none;
+}
+
+.botoes-post button#btn-enviar{
+    background-color: #568E65;
+    color: white;
+}
+.botoes-post button#btn-enviar:hover{
+    background-color: #449C5C;
+    transition: all .5s;
+    color: white;
+}
+
+
