--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -35,6 +35,7 @@
 .container-central{
     background-color: #F2F2F2;
     width: 55%;
+    
 }   
 
 .container-direito{
@@ -42,7 +43,7 @@
     display: flex;
     flex-direction: column;
     background-color: #F2F2F2;
-
+    margin-right: 1%;
 }
 
 .busca-orkut input{
@@ -82,16 +83,30 @@
     width: 90%;
     margin: 0 auto;
     height: 50%;
-    border-radius: 70px;
-    margin-top: 20%;
-    padding: 10%;
+    border-radius: 30px;
+    margin-top: 5%;
+    padding: 5%;
     margin-left: 7%;
 
 }
 
+.info-perfil .linha{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.item-opcao{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5%;
+}
+
 .info-perfil h1{
     font-size: 150%;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
 }
 
 .info-perfil p{
@@ -111,6 +126,7 @@
     text-decoration: none;
     font-size: 130%;
     color: #433D38;
+    margin-left: 2%;
 }
 
 .amigos-comunidades{
@@ -119,11 +135,12 @@
     justify-content: space-between;
     background-color: #fff;
     height: 50%;
-    border-radius: 70px;
+    border-radius: 30px;
     margin-top: 20%;
-    padding: 10%;
+    padding: 1.5%;
     margin-left: 7%;
     height: auto;
+
 }
 
 .amigos-comunidades hr{
@@ -135,25 +152,30 @@
 }
 
 
+.amigos-comunidades .amigos {
+    padding: 1.5%;
+}
+
 .amigos-comunidades .amigos .amigo{
     display: flex;
     flex-direction: row;
     align-items: center;
     float: left;
     position: relative;
+    margin: 2.5% auto;
+    
 }
 
 .amigos-comunidades img{
-   width: 30%;
+   width: 12%;
    border-radius: 100%;
-   padding: 5%;
-
 }
 
 .amigos-comunidades  a{
     text-decoration: none;
     color: #7A7473;
     font-size: 120%;
+    margin-left: 8px;
  
  }
 
@@ -164,7 +186,7 @@
     color: red;
  }
  .ocupado{
-    color: yellow;
+    color: rgb(251, 117, 0);
  }
 
  
@@ -176,19 +198,22 @@
 
  .amigos-comunidades .amigos .amigo .status{
     position: absolute;
-    left: 10px;
-    bottom: 10px;
+    left: -5px;
+    bottom: -8px;
     font-size: 14pt;
   
  }
 
-
+.amigos-comunidades .comunidades{
+    padding: 1.5%;
+}
  .amigos-comunidades .comunidades .comunidade{
     display: flex;
     flex-direction: row;
     align-items: center;
     float: left;
     position: relative;
+    margin: 2.5% auto;
 }
 
 
@@ -198,31 +223,39 @@
     width: 100%;
     min-height: 100%;
     padding: 5%;
-
     display: flex;
     flex-direction: column;
 }
 
+.feed-perfil div{
+    margin-bottom: 2%;
+}
+
 .feed-perfil .titulo-feed h1{
-    font-size: 300%;
+    font-size: 250%;
+    margin-bottom: 2%;
 }
 
 .bloco-welcome{
     background-color: #F2F2F2;
     width: 100%;
-    border-radius: 60px;
+    border-radius: 30px;
 
     display: flex;
     flex-direction: column;
     padding: 5%;
 }
 
+.bloco-welcome a{
+    color: #7A7473;
+}
+
 .bloco-welcome h3{
-    font-size: 20pt;
+    font-size: 100%;
 }
 
 .bloco-welcome h2{
-    font-size: 25pt;
+    font-size: 150%;
 }
 
 .bloco-welcome hr{
@@ -301,6 +334,13 @@
     width: 88%;
     margin-left: 2%;
     border: none;
+    outline: none;
+    padding-left: 40px;
+}
+
+#post::placeholder{
+
+   font-size: 110%;
     
 }
 
