--- a/CSS/comunidade.css
+++ b/CSS/comunidade.css
@@ -117,8 +117,8 @@ body {
 }
 
 .nome-descricao{
-    margin-top: -3px;
-    padding: 7% 4%;
+    margin: 0 auto;
+    padding: 7% 6%;
     background-color: white;
     border-radius: 30px;
 }
@@ -139,17 +139,18 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .caixinha h3 {
-    width: 20%;
+    width: 25%;
     font-size: 1.2rem;
     text-align: right;
 }
 
 .caixinha p {
-    width: 65%;
+    width: 70%;
+    text-align: justify;
 }
 
 
