--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,3 +1,11 @@
+.busca-orkut input{
+    border: 1px solid #A6A6A6;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 0px 5px;
+    height: 50px; 
+}
+
 
 .container-header{
     display: flex;
