--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -117,7 +117,7 @@
 .info-perfil a{
     text-decoration: none;
     font-size: 130%;
-    color: #433D38;
+    color: #7A7473;
     margin-left: 2%;
 }
 
@@ -276,6 +276,7 @@
 .ultimas-visualizacoes{
     display: flex;
     flex-direction: row;
+    
 }
 
 .pessoa img{
@@ -328,6 +329,7 @@
     border: none;
     outline: none;
     padding-left: 40px;
+
 }
 
 #post::placeholder{
