--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,38 +1,51 @@
-.busca-orkut input{
-    border: 1px solid #A6A6A6;
-    padding: 10px 30px;
-    border-radius: 20px;
-    margin: 0px 5px;
-    height: 50px; 
-}
-
-
 .container-header{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     height: 70px;
     z-index: 1;
-    padding: 10px;
+    margin: 20px auto;
+    width: 100%;
 }
 
-.container-header #logo{
-    width: 9%;
-    margin-left: 20px;
-    margin: 0;
+.container-header figure {
+    width: 20%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-header figure #logo{
+    width: 50%;
     
 }
 
-.container-header #logo img{
-    width: 50px;
+.busca-orkut{
+    display: flex;
+    align-items: center;
+    width: 55%;
+    vertical-align: middle;
 }
 
-.busca-orkut{
-    width: 60%;
+.busca-orkut input{
+    border: 1px solid #A6A6A6;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 0px 5px;
+    height: 50px;
+    border: none;
 }
 
 .busca-orkut input{
     width: 100%;
+}
+
+.menu{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
 }
 
 .menu ul{
@@ -45,7 +58,6 @@
     padding: 40px 20px;
     border-radius: 20px;
     width: 250px;
-
 }
 
 .menu ul li{
