--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -3,6 +3,7 @@
 footer {
     background-color: #EC3496;
     padding: 1.5% 0;
+    margin-top: 2%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
