--- a/CSS/responsividade-cadastro.css
+++ b/CSS/responsividade-cadastro.css
@@ -68,6 +68,10 @@
         width: 100%;
     }
  
+    
+    .form-titulo h1{
+        font-size: 30pt;
+    }
 
     
 }
@@ -131,6 +135,11 @@
         width: 100%;
     }
 
+    
+    .form-titulo h1{
+        font-size: 35pt;
+    }
+
 
     
 }
@@ -173,6 +182,10 @@
         width: 31.5%;
     }
 
+    
+    .form-titulo h1{
+        font-size: 40pt;
+    }
 
 
 
@@ -227,6 +240,10 @@
         width: 31.8%;
     }
 
+    
+    .form-titulo h1{
+        font-size: 45pt;
+    }
 
 }
 
@@ -274,6 +291,9 @@
     }
 
     
+    .form-titulo h1{
+        font-size: 50pt;
+    }
     
 }
 
@@ -312,6 +332,10 @@
         top: -2rem;
      
     
+    }
+
+    .form-titulo h1{
+        font-size: 50pt;
     }
     
     
