Footer + resonsividade comunidade

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -9,7 +9,7 @@ footer {
     font-family: 'inter', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 13px;
     color:#F2F2F2;
-    margin-top: 2%;
+    /* margin-top: 2%; */
 }
 
 footer nav ul {
